2ºSemestre/LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_add.geom
geometrics: main

/* Should fail -> extraneous input '-' expecting Number */
add thickness -10 to r1 